--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <hr>
 
     <a href="public/movie-ranking.html"><h2>Dale's Movie Power Rankings</h2></a>
-    <img src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-560w,f_auto,q_auto:best/newscms/2015_07/890006/150213-space-interstellar-gargantua.jpg" alt="Movie Power Rankings Preview" height="150">
+    <a href="public/movie-ranking.html"><img src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-560w,f_auto,q_auto:best/newscms/2015_07/890006/150213-space-interstellar-gargantua.jpg" alt="Movie Power Rankings Preview" height="150"></a>
 
     <a href="public/birthday-invite.html"><h2>Dale's Birthday Invitation</h2></a>
-    <img src="https://preview.redd.it/its-muscle-man-birthday-what-your-giving-him-v0-lgvckb9yhb6c1.jpg?width=320&crop=smart&auto=webp&s=5e11aefd946b9d4a63fc4fe2cb96dda4e7f74a07" alt="Birthday Invitation Preview" height="200">
+    <a href="public/birthday-invite.html"><img src="https://preview.redd.it/its-muscle-man-birthday-what-your-giving-him-v0-lgvckb9yhb6c1.jpg?width=320&crop=smart&auto=webp&s=5e11aefd946b9d4a63fc4fe2cb96dda4e7f74a07" alt="Birthday Invitation Preview" height="200"></a>
 
     <hr>
 
